--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -10,14 +10,15 @@
         <h1 class="text-center primary-text my-5">Add New Task</h1>
         <form method="post" style="max-width: 400px" class="mx-auto">
             {% csrf_token %}
-            {{ form.name.label_tag }}
-            {{ form.name }}
-{#            <div class="my-3 form-check">#}
-{#                <input type="checkbox" class="form-check-input" id="isFinished" name="isFinished">#}
-{#                <label class="form-check-label" for="isFinished">Is Finished</label>#}
-{#            </div>#}
-            {{ form.assignment.label_tag }}
-            {{ form.assignment }}
+            <div class="mb-3">
+                <label class="form-label">Name <span class="text-danger">*</span></label>
+                    {{ form.name }}
+            </div>
+            <div class="mb-3">
+                <label class="form-label">Assignment <span class="text-danger">*</span></label>
+                        {{ form.assignment }}
+            </div>
+            <div class="mb-3"> <span class="text-danger">All fields are required.</span></div>
 
             <p class="text-success mt-4">When you add a Task, by default it is not finished. When you finish it
                 and want to change that you can do so by editing the task. :)</p>
