--- a/templates/task_details.html
+++ b/templates/task_details.html
@@ -8,7 +8,7 @@
     <div class="container">
         <a href="{% if source == '/' %}{% url 'home' %}{% else %}{% url 'assignments' %}{% endif %}"
                class="btn btn-outline-secondary">Go Back</a>
-        <h1 class="text-center primary-text my-5">{{ task.name }} Details</h1>
+{#        <h1 class="text-center primary-text my-5">{{ task.name }} Details</h1>#}
         <div class="card border-info mb-3 mx-auto" style="max-width: 700px">
             <div class="card-header">
                 <h3 class="card-title text-info">{{ task.name }}</h3>
@@ -18,10 +18,10 @@
                 <p class="card-text">Assignment: {{ task.assignment.name }}</p>
                 <div class="d-flex mt-3">
                     <div class="text-left">
-                        <a href="{% url 'edit_task' task.name %}" class="btn btn-outline-dark">Edit Task</a>
+                        <a href="{% url 'edit_task' task.id %}" class="btn btn-outline-dark">Edit Task</a>
                     </div>
                     <div class="text-right ml-auto">
-                        <a href="{% url 'delete_task' task.name %}" class="btn btn-outline-danger">Delete Task</a>
+                        <a href="{% url 'delete_task' task.id %}" class="btn btn-outline-danger">Delete Task</a>
                     </div>
                 </div>
             </div>
