Minor design changes

--- a/templates/add_reminder.html
+++ b/templates/add_reminder.html
@@ -32,7 +32,7 @@
                         <label class="form-label">Deadline <span class="text-danger">*</span></label>
                         <input type="text" class="form-control datetimepicker" id="id_deadline" name="deadline" required>
                     </div>
-                    <div class="mb-3"> <span class="text-danger">All fields are required.</span></div>
+                    <div class="mb-3"> <span class="text-danger">These fields are required.</span></div>
                     <div class="row">
                         <div class="col-md-6 text-left mt-2">
                             <a href="{% url 'reminders' %}" class="btn btn-secondary">Cancel</a>
