--- a/templates/add_assignment_task.html
+++ b/templates/add_assignment_task.html
@@ -32,10 +32,10 @@
                         <input type="text" class="form-control datepicker" id="id_due_date" name="due_date" required>
                     </div>
                     <div class="mb-3">
-                        <label class="form-label">Tasks (one per line): <span class="text-danger">*</span></label>
+                        <label class="form-label">Tasks (one per line): </label>
                         <textarea name="tasks" class="form-control" rows="3">{{ form.tasks.value }}</textarea>
                     </div>
-                    <div class="mb-3"> <span class="text-danger">All fields are required.</span></div>
+                    <div class="mb-3"> <span class="text-danger">These fields are required.</span></div>
                     <div class="row">
                         <div class="col-md-6 text-left">
                             <a href="{% url 'assignments' %}" class="btn btn-secondary mt-2">Cancel</a>
