--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -18,7 +18,7 @@
                 <label class="form-label">Assignment <span class="text-danger">*</span></label>
                         {{ form.assignment }}
             </div>
-            <div class="mb-3"> <span class="text-danger">All fields are required.</span></div>
+            <div class="mb-3"> <span class="text-danger">These fields are required.</span></div>
 
             <p class="text-success mt-4">When you add a Task, by default it is not finished. When you finish it
                 and want to change that you can do so by editing the task. :)</p>
