--- a/templates/ask_question.html
+++ b/templates/ask_question.html
@@ -23,7 +23,7 @@
                         <label class="form-label">Description <span class="text-danger">*</span></label>
                             {{ form.description }}
                     </div>
-                    <div class="mb-3"> <span class="text-danger">All fields are required.</span></div>
+                    <div class="mb-3"> <span class="text-danger">These fields are required.</span></div>
                     <div class="row">
                         <div class="col-md-6 text-left">
                             <a href="{% url 'group_study' %}" class="btn btn-secondary mt-2">Cancel</a>
