--- a/templates/edit_assignment.html
+++ b/templates/edit_assignment.html
@@ -31,6 +31,7 @@
                     <label class="form-label">Due date <span class="text-danger">*</span></label>
                     <input type="text" class="form-control datepicker" id="id_due_date" name="due_date">
                 </div>
+                <div class="mb-3"> <span class="text-danger">These fields are required.</span></div>
 
 {#                        {% for task in tasks %}#}
 {#                            <li>#}
