--- a/templates/edit_reminder.html
+++ b/templates/edit_reminder.html
@@ -27,6 +27,7 @@
                     <label class="form-label">Deadline <span class="text-danger">*</span></label>
                     <input type="text" class="form-control datetimepicker" id="id_deadline" name="deadline" required>
                 </div>
+                <div class="mb-3"> <span class="text-danger">These fields are required.</span></div>
                 <div class="text-right">
                     <input type="submit" value="Save" class="btn btn-primary mt-2">
                 </div>
