--- a/templates/edit_task.html
+++ b/templates/edit_task.html
@@ -19,6 +19,7 @@
                     <input type="checkbox" class="form-check-input" id="is_finished" name="is_finished" {% if task.is_finished %}checked{% endif %} value="true">
                     <label class="form-check-label" for="isFinished">Is Finished <span class="text-danger">*</span></label>
                 </div>
+            <div class="mb-3"> <span class="text-danger">These fields are required.</span></div>
                 <div class="text-right">
                     <input type="submit" value="Save" class="btn btn-primary mt-2">
                 </div>
