--- a/templates/reminders.html
+++ b/templates/reminders.html
@@ -2,7 +2,6 @@
 
 {% block content %}
     {% if user.is_authenticated %}
-
         <div>
 
         {% if reminders.count == 0 %}
@@ -12,8 +11,88 @@
             </div>
         {% else %}
         <div class="text-center my-3">
-            <h1 class="primary-text"> My Reminders </h1>
+            <h1 class="primary-text" style="font-size: xxx-large"> My Reminders </h1>
         </div>
+
+        <div class="mx-5 px-4 mt-4">
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="alert alert-success mt-3">
+                        {{ message|safe }}
+                    </div>
+                {% endfor %}
+            {% endif %}
+            <div class="row">
+                <div class="col-md-6 mx-auto" style="max-width: 700px">
+                    <h1 class="primary-text text-center" style="color: #FDC642"> Active Reminders </h1>
+                    {% for reminder in active_reminders %}
+                        <div class="card border-secondary mb-4">
+                            <div class="card border-secondary">
+                            <div class="card-body">
+                                <h5 class="card-title text-success">{{ reminder.name }}</h5>
+                                <p class="card-text">{{ reminder.description }}</p>
+                                <p class="card-text"><i>Course:</i> {{ reminder.course }}</p>
+                            </div>
+                            <div class="text-right ml-auto">
+                                <a href="{% url 'reminder_details' name=reminder.id %}?source=reminders"
+                                   class="btn btn-outline-success mb-2 mr-2">See more</a>
+                            </div>
+                            <div class="card-footer">
+                                {% if reminder.time_remaining == "Reminder Expired" %}
+                                    <small class="card-text" style="color: #ff001b"><b>Your reminder has
+                                        expired</b></small>
+                                {% else %}
+                                    <small class="card-text" style="color: #FDC642"><b>Time
+                                        remaining: {{ reminder.time_remaining }}</b></small>
+                                {% endif %}
+                            </div>
+                        </div>
+                        </div>
+                    {% endfor %}
+                </div>
+                <div class="col-md-6 mx-auto" style="max-width: 700px">
+                    <h1 class="primary-text text-center" style="color: #ff001b"> Expired Reminders </h1>
+                    {% for reminder in expired_reminders %}
+                        <div class="card border-secondary mb-4">
+                            <div class="card border-secondary">
+                            <div class="card-body">
+                                <h5 class="card-title text-success">{{ reminder.name }}</h5>
+                                <p class="card-text">{{ reminder.description }}</p>
+                                <p class="card-text"><i>Course:</i> {{ reminder.course }}</p>
+                            </div>
+                            <div class="text-right ml-auto">
+                                <a href="{% url 'reminder_details' name=reminder.id %}?source=reminders"
+                                   class="btn btn-outline-success mb-2 mr-2">See more</a>
+                            </div>
+                            <div class="card-footer">
+                                {% if reminder.time_remaining == "Reminder Expired" %}
+                                    <small class="card-text" style="color: #ff001b"><b>Your reminder has
+                                        expired</b></small>
+                                {% else %}
+                                    <small class="card-text" style="color: #FDC642"><b>Time
+                                        remaining: {{ reminder.time_remaining }}</b></small>
+                                {% endif %}
+                            </div>
+                        </div>
+                        </div>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+        {% endif %}
+        </div>
+
+        <div class="fixed-bottom text-right mx-5 mb-3">
+            <a href="{% url 'add_reminder' %}" class="btn btn-primary px-4">Add New Reminder</a>
+        </div>
+
+    {% else %}
+        {% include "unauthenticated_message.html" %}
+    {% endif %}
+{% endblock %}
+
+
+
         <!-- Updated code with card layout -->
         {#    <div class="mx-5 px-4">#}
         {#        <div class="row">#}
@@ -39,54 +118,3 @@
         {#            {% endfor %}#}
         {#        </div>#}
         {#    </div>#}
-
-        <div class="mx-5 px-4">
-            {% if messages %}
-                {% for message in messages %}
-                    <div class="alert alert-success mt-3">
-                        {{ message|safe }}
-                    </div>
-                {% endfor %}
-            {% endif %}
-            <div class="row">
-                {% for reminder in reminders %}
-                    <div class="col-md-4 mb-4">
-                        <div class="card border-secondary">
-                            <div class="card-body">
-                                <h5 class="card-title text-success">{{ reminder.name }}</h5>
-                                <p class="card-text">{{ reminder.description }}</p>
-                                <p class="card-text"><i>Course:</i> {{ reminder.course }}</p>
-                            </div>
-                            <div class="text-right ml-auto">
-                                <a href="{% url 'reminder_details' name=reminder.id %}?source=reminders"
-                                   class="btn btn-outline-success mb-2 mr-2">See more</a>
-                            </div>
-                            <div class="card-footer">
-                                {% if reminder.time_remaining == "Reminder Expired" %}
-                                    <small class="card-text" style="color: #ff001b"><b>Your reminder has
-                                        expired</b></small>
-                                {% else %}
-                                    <small class="card-text" style="color: #FDC642"><b>Time
-                                        remaining: {{ reminder.time_remaining }}</b></small>
-                                {% endif %}
-                            </div>
-                        </div>
-                    </div>
-                {% endfor %}
-            </div>
-        </div>
-
-        {% endif %}
-        </div>
-
-        <div class="fixed-bottom text-right mx-5 mb-3">
-            <a href="{% url 'add_reminder' %}" class="btn btn-primary px-4">Add New Reminder</a>
-        </div>
-
-
-
-    {% else %}
-        {% include "unauthenticated_message.html" %}
-    {% endif %}
-
-{% endblock %}
