--- a/templates/reminders.html
+++ b/templates/reminders.html
@@ -4,8 +4,16 @@
     {% if user.is_authenticated %}
         <div>
 
-        {% if reminders.count == 0 %}
+        {% if active_reminders.count == 0 and expired_reminders.count == 0 %}
             <h2 class="text-center primary-text mb-4">You do not have any reminders.</h2>
+            <div class="mx-5 px-4">
+                    {% if messages %}
+                        {% for message in messages %}
+                            <div class="alert alert-success mt-3">
+                                {{ message|safe }}
+                            </div>
+                        {% endfor %}
+                    {% endif %}
             <div class="row text-center mx-auto py-4" style="max-width: 300px">
                 <a href="{% url 'add_reminder' %}" class="btn btn-primary px-4">Add New Reminder</a>
             </div>
@@ -79,12 +87,13 @@
                 </div>
             </div>
         </div>
+            <div class="fixed-bottom text-right mx-5 mb-3">
+            <a href="{% url 'add_reminder' %}" class="btn btn-primary px-4">Add New Reminder</a>
+        </div>
         {% endif %}
         </div>
 
-        <div class="fixed-bottom text-right mx-5 mb-3">
-            <a href="{% url 'add_reminder' %}" class="btn btn-primary px-4">Add New Reminder</a>
-        </div>
+
 
     {% else %}
         {% include "unauthenticated_message.html" %}
