--- a/templates/add_reminder.html
+++ b/templates/add_reminder.html
@@ -6,7 +6,6 @@
 
 {% block content %}
     {% if user.is_authenticated %}
-
         <div class="container mt-4">
             <div class="mx-auto" style="max-width: 600px">
                 <h1 class="text-center primary-text mb-5">Add Reminder</h1>
@@ -24,18 +23,16 @@
                         <label class="form-label">Course <span class="text-danger">*</span></label>
                         {{ form.course }}
                     </div>
-{#                    <div class="mb-3">#}
-{#                        <label class="form-label">Deadline <span class="text-danger">*</span></label>#}
-{#                        {{ form.deadline }}#}
-{#                    </div>#}
                     <div class="mb-3">
                         <label class="form-label">Deadline <span class="text-danger">*</span></label>
-                        <input type="text" class="form-control datetimepicker" id="id_deadline" name="deadline" required>
+                        <input type="text" class="form-control datetimepicker" id="id_deadline" name="deadline"
+                               required>
                     </div>
-                    <div class="mb-3"> <span class="text-danger">These fields are required.</span></div>
+                    <div class="mb-3"><span class="text-danger">These fields are required.</span></div>
                     <div class="row">
                         <div class="col-md-6 text-left mt-2">
-                            <a href="{% url 'reminders' %}" class="btn btn-secondary">Cancel</a>
+                            <a class="btn btn-secondary" data-toggle="modal"
+                               data-target="#cancelModal">Cancel</a>
                         </div>
                         <div class="col-md-6 text-right">
                             <button type="submit" class="btn btn-primary mt-2">Save</button>
@@ -45,10 +42,29 @@
             </div>
         </div>
 
-
+        <div class="modal fade" id="cancelModal" tabindex="-1" role="dialog" aria-labelledby="cancelModalLabel"
+             aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="cancelModalLabel">Confirm Cancel</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        Are you sure you want to cancel? If you proceed, any unsaved progress will be lost.
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">No, Keep Editing</button>
+                        <a href="{% url 'reminders' %}" class="btn btn-danger">Yes, Cancel</a>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <script>
-            document.addEventListener("DOMContentLoaded", function() {
+            document.addEventListener("DOMContentLoaded", function () {
                 flatpickr(".datetimepicker", {
                     enableTime: true,
                     dateFormat: "Y-m-d H:i",
