--- a/templates/ask_question.html
+++ b/templates/ask_question.html
@@ -13,26 +13,48 @@
                     {% csrf_token %}
                     <div class="mb-3">
                         <label class="form-label">Title <span class="text-danger">*</span></label>
-                            {{ form.title }}
+                        {{ form.title }}
                     </div>
                     <div class="mb-3">
                         <label class="form-label">Course <span class="text-danger">*</span></label>
-                            {{ form.course }}
+                        {{ form.course }}
                     </div>
                     <div class="mb-3">
                         <label class="form-label">Description <span class="text-danger">*</span></label>
-                            {{ form.description }}
+                        {{ form.description }}
                     </div>
-                    <div class="mb-3"> <span class="text-danger">These fields are required.</span></div>
+                    <div class="mb-3"><span class="text-danger">These fields are required.</span></div>
                     <div class="row">
                         <div class="col-md-6 text-left">
-                            <a href="{% url 'group_study' %}" class="btn btn-secondary mt-2">Cancel</a>
+                            <a data-toggle="modal"
+                               data-target="#cancelModal" class="btn btn-secondary mt-2">Cancel</a>
                         </div>
                         <div class="col-md-6 text-right">
                             <input type="submit" value="Post" class="btn btn-primary mt-2">
                         </div>
                     </div>
                 </form>
+            </div>
+        </div>
+
+        <div class="modal fade" id="cancelModal" tabindex="-1" role="dialog" aria-labelledby="cancelModalLabel"
+             aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="cancelModalLabel">Confirm Cancel</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        Are you sure you want to cancel? If you proceed, any unsaved progress will be lost.
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">No, Keep Editing</button>
+                        <a href="{% url 'group_study' %}" class="btn btn-danger">Yes, Cancel</a>
+                    </div>
+                </div>
             </div>
         </div>
 
