--- a/templates/assignment_details.html
+++ b/templates/assignment_details.html
@@ -16,27 +16,34 @@
                 <div class="card-body">
                     <p class="card-text">Description of your assignment: {{ assignment.description }}</p>
                     <p class="card-text">Course: {{ assignment.course }}</p>
-                    <p class="card-text">Assignment progress: {{ assignment.progress }}</p>
+                    <p class="card-text">Assignment progress:</p>
+                    <div class="progress my-2">
+                        <div id="progressBar_{{ assignment.id }}"
+                             class="progress-bar progress-bar-striped"
+                             role="progressbar" style="width: 0%;" aria-valuenow="0"
+                             aria-valuemin="0"
+                             aria-valuemax="100"></div>
+                    </div>
                     <h5 class="card-text">Due date: {{ assignment.due_date }}</h5>
                     <h6 class="mt-3">Tasks:</h6>
-                        <ul class="list-group">
-                            {% for task in tasks %}
-                                {% if task.assignment == assignment %}
+                    <ul class="list-group">
+                        {% for task in tasks %}
+                            {% if task.assignment == assignment %}
                                 <li class="list-group-item">
-                                <a href="{% url 'task_details' task_name=task.id %}">
-                                                        {{ task.name }}</a> -
+                                    <a href="{% url 'task_details' task_name=task.id %}">
+                                        {{ task.name }}</a> -
                                     <span class="{% if task.is_finished %}text-success{% else %}text-danger{% endif %}">
                                 {% if task.is_finished %}Finished{% else %}Not Finished{% endif %}
                                     </span>
                                 </li>
-                                {% endif %}
-                            {% endfor %}
-                        </ul>
-{#                    <p class="card-text">Made by user: {{ assignment.user }}</p>#}
+                            {% endif %}
+                        {% endfor %}
+                    </ul>
                     <div class="d-flex mt-3">
                         <div class="text-left">
-                            <a href="{% url 'delete_assignment' name=assignment.id %}"
-                               class="btn btn-danger">Delete</a>
+                            <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#deleteModal">
+                                Delete
+                            </button>
                         </div>
                         <div class="text-right ml-auto">
                             <a href="{% url 'edit_assignment' assignment.id %}" class="btn btn-outline-dark">Edit</a>
@@ -44,8 +51,57 @@
                     </div>
                 </div>
             </div>
-
         </div>
+
+        <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel"
+             aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="deleteModalLabel">Confirm Delete</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        Are you sure you want to delete this assignment?
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">No, Keep Assignment
+                        </button>
+                        <form method="post" action="{% url 'delete_assignment' name=assignment.id %}" class="d-inline">
+                            {% csrf_token %}
+                            <button type="submit" class="btn btn-danger">Yes, Delete</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <script>
+            function updateProgressBar(progress, progressBarId) {
+                var percentage = progress * 10;
+
+                var progressBar = document.getElementById(progressBarId);
+                progressBar.style.width = percentage + '%';
+                progressBar.innerHTML = percentage + '%';
+
+                progressBar.setAttribute('aria-valuenow', percentage);
+
+                if (percentage < 25) {
+                    progressBar.classList.add('bg-danger');
+                } else if (percentage < 50) {
+                    progressBar.classList.add('bg-warning');
+                } else if (percentage < 75) {
+                    progressBar.classList.add('bg-primary');
+                } else {
+                    progressBar.classList.add('bg-success');
+                }
+            }
+
+            var progressValue_{{ assignment.id }} = {{ assignment.progress }};
+            updateProgressBar(progressValue_{{ assignment.id }}, 'progressBar_{{ assignment.id }}');
+        </script>
     {% else %}
         {% include "unauthenticated_message.html" %}
     {% endif %}
