--- a/templates/edit_task.html
+++ b/templates/edit_task.html
@@ -7,7 +7,8 @@
 {% block content %}
     {% if user.is_authenticated %}
         <div class="container">
-            <a href="{% url 'task_details' task_name=task.id %}" class="btn btn-outline-secondary">Go Back</a>
+            <a data-toggle="modal" data-target="#cancelEditModal"
+               class="btn btn-outline-secondary">Go Back</a>
             <h1 class="text-center primary-text my-5">Edit Task</h1>
             <form method="post" style="max-width: 400px" class="mx-auto">
                 {% csrf_token %}
@@ -16,14 +17,39 @@
                     {{ form.name }}
                 </div>
                 <div class="mb-3 form-check">
-                    <input type="checkbox" class="form-check-input" id="is_finished" name="is_finished" {% if task.is_finished %}checked{% endif %} value="true">
-                    <label class="form-check-label" for="isFinished">Is Finished <span class="text-danger">*</span></label>
+                    <input type="checkbox" class="form-check-input" id="is_finished" name="is_finished"
+                           {% if task.is_finished %}checked{% endif %} value="true">
+                    <label class="form-check-label" for="isFinished">Is Finished <span
+                            class="text-danger">*</span></label>
                 </div>
-            <div class="mb-3"> <span class="text-danger">These fields are required.</span></div>
+                <div class="mb-3"><span class="text-danger">These fields are required.</span></div>
                 <div class="text-right">
                     <input type="submit" value="Save" class="btn btn-primary mt-2">
                 </div>
             </form>
+        </div>
+
+        <div class="modal fade" id="cancelEditModal" tabindex="-1" role="dialog" aria-labelledby="cancelEditModalLabel"
+             aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="cancelEditModalLabel">Confirm Cancel</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        Are you sure you want to cancel editing? Any unsaved changes will be lost.
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">No, Continue Editing
+                        </button>
+                        <a href="{% url 'task_details' task_name=task.id %}" class="btn btn-danger">Yes, Cancel
+                            Editing</a>
+                    </div>
+                </div>
+            </div>
         </div>
     {% else %}
         {% include "unauthenticated_message.html" %}
