--- a/templates/reminder_details.html
+++ b/templates/reminder_details.html
@@ -18,16 +18,40 @@
                     <p class="card-text">Course: {{ reminder.course }}</p>
                     <h5 class="card-text">Deadline: {{ reminder.deadline }}</h5>
                     <div class="d-flex mt-3">
-                        <div class="text-left">
-                            <a href="{% url 'delete_reminder' name=reminder.id %}" class="btn btn-danger">Delete</a>
-                        </div>
+                        <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#deleteModal">
+                            Delete
+                        </button>
                         <div class="text-right ml-auto">
                             <a href="{% url 'edit_reminder' reminder.id %}" class="btn btn-outline-dark">Edit</a>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
 
+        <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel"
+             aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="deleteModalLabel">Confirm Delete</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        Are you sure you want to delete this reminder?
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">No, Keep Reminder
+                        </button>
+                        <form method="post" action="{% url 'delete_reminder' name=reminder.id %}" class="d-inline">
+                            {% csrf_token %}
+                            <button type="submit" class="btn btn-danger">Yes, Delete</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
     {% else %}
         {% include "unauthenticated_message.html" %}
