--- a/templates/reminders.html
+++ b/templates/reminders.html
@@ -1,12 +1,33 @@
 {% extends "base.html" %}
 
 {% block content %}
-    {% if user.is_authenticated %}
-        <div>
+    <div class="content-container">
+        <div class="fixed-bottom text-right mx-5 mb-3">
+            <a href="{% url 'add_reminder' %}" class="btn btn-primary px-4">Add New Reminder</a>
+        </div>
 
-        {% if active_reminders.count == 0 and expired_reminders.count == 0 %}
-            <h2 class="text-center primary-text mb-4">You do not have any reminders.</h2>
-            <div class="mx-5 px-4">
+        {% if user.is_authenticated %}
+            <div>
+                {% if active_reminders.count == 0 and expired_reminders.count == 0 %}
+                    <h2 class="text-center primary-text mb-4">You do not have any reminders.</h2>
+                    <div class="mx-5 px-4">
+                        {% if messages %}
+                            {% for message in messages %}
+                                <div class="alert alert-success mt-3">
+                                    {{ message|safe }}
+                                </div>
+                            {% endfor %}
+                            </div>
+                        {% endif %}
+                    <div class="row text-center mx-auto py-4" style="max-width: 300px">
+                        <a href="{% url 'add_reminder' %}" class="btn btn-primary px-4">Add New Reminder</a>
+                    </div>
+                    </div>
+                {% else %}
+                    <div class="text-center my-3">
+                        <h1 class="primary-text" style="font-size: xxx-large"> My Reminders </h1>
+                    </div>
+                    <div class="mx-5 px-4 mt-4">
                     {% if messages %}
                         {% for message in messages %}
                             <div class="alert alert-success mt-3">
@@ -14,116 +35,79 @@
                             </div>
                         {% endfor %}
                     {% endif %}
-            <div class="row text-center mx-auto py-4" style="max-width: 300px">
-                <a href="{% url 'add_reminder' %}" class="btn btn-primary px-4">Add New Reminder</a>
+
+                    <div class="row">
+                        <div class="col-md-6 mx-auto" style="max-width: 700px">
+                            {% if active_reminders.count != 0 %}
+                                <h1 class="primary-text text-center" style="color: #FDC642"> Active Reminders </h1>
+                                {% for reminder in active_reminders %}
+                                    <div class="card border-secondary mb-4">
+                                        <div class="card border-secondary">
+                                            <div class="card-body">
+                                                <h5 class="card-title text-success">{{ reminder.name }}</h5>
+                                                <p class="card-text">{{ reminder.description }}</p>
+                                                <p class="card-text"><i>Course:</i> {{ reminder.course }}</p>
+                                            </div>
+                                            <div class="text-right ml-auto">
+                                                <a href="{% url 'reminder_details' name=reminder.id %}?source=reminders"
+                                                   class="btn btn-outline-success mb-2 mr-2">See more</a>
+                                            </div>
+                                            <div class="card-footer">
+                                                {% if reminder.time_remaining == "Reminder Expired" %}
+                                                    <small class="card-text" style="color: #ff001b"><b>Your reminder has
+                                                        expired</b></small>
+                                                {% else %}
+                                                    <small class="card-text" style="color: #FDC642"><b>Time
+                                                        remaining: {{ reminder.time_remaining }}</b></small>
+                                                {% endif %}
+                                            </div>
+                                        </div>
+                                    </div>
+                                {% endfor %}
+                                {% else %}
+                                <h1 class="text-center text-warning mb-4">You do not have any active reminders.</h1>
+                            {% endif %}
+                        </div>
+
+                        <div class="col-md-6 mx-auto" style="max-width: 700px">
+
+                            {% if expired_reminders.count != 0 %}
+                                <h1 class="primary-text text-center" style="color: #ff001b"> Expired Reminders </h1>
+                                {% for reminder in expired_reminders %}
+                                    <div class="card border-secondary mb-4">
+                                        <div class="card border-secondary">
+                                            <div class="card-body">
+                                                <h5 class="card-title text-success">{{ reminder.name }}</h5>
+                                                <p class="card-text">{{ reminder.description }}</p>
+                                                <p class="card-text"><i>Course:</i> {{ reminder.course }}</p>
+                                            </div>
+                                            <div class="text-right ml-auto">
+                                                <a href="{% url 'reminder_details' name=reminder.id %}?source=reminders"
+                                                   class="btn btn-outline-success mb-2 mr-2">See more</a>
+                                            </div>
+                                            <div class="card-footer">
+                                                {% if reminder.time_remaining == "Reminder Expired" %}
+                                                    <small class="card-text" style="color: #ff001b"><b>Your reminder has
+                                                        expired</b></small>
+                                                {% else %}
+                                                    <small class="card-text" style="color: #FDC642"><b>Time
+                                                        remaining: {{ reminder.time_remaining }}</b></small>
+                                                {% endif %}
+                                            </div>
+                                        </div>
+                                    </div>
+                                {% endfor %}
+                                {% else %}
+                                 <h1 class="text-center text-danger mb-4">You do not have any expired reminders.</h1>
+                            {% endif %}
+                        </div>
+                    </div>
+                {% endif %}
+                </div>
+            </div>
             </div>
         {% else %}
-        <div class="text-center my-3">
-            <h1 class="primary-text" style="font-size: xxx-large"> My Reminders </h1>
-        </div>
-
-        <div class="mx-5 px-4 mt-4">
-            {% if messages %}
-                {% for message in messages %}
-                    <div class="alert alert-success mt-3">
-                        {{ message|safe }}
-                    </div>
-                {% endfor %}
-            {% endif %}
-            <div class="row">
-                <div class="col-md-6 mx-auto" style="max-width: 700px">
-                    <h1 class="primary-text text-center" style="color: #FDC642"> Active Reminders </h1>
-                    {% for reminder in active_reminders %}
-                        <div class="card border-secondary mb-4">
-                            <div class="card border-secondary">
-                            <div class="card-body">
-                                <h5 class="card-title text-success">{{ reminder.name }}</h5>
-                                <p class="card-text">{{ reminder.description }}</p>
-                                <p class="card-text"><i>Course:</i> {{ reminder.course }}</p>
-                            </div>
-                            <div class="text-right ml-auto">
-                                <a href="{% url 'reminder_details' name=reminder.id %}?source=reminders"
-                                   class="btn btn-outline-success mb-2 mr-2">See more</a>
-                            </div>
-                            <div class="card-footer">
-                                {% if reminder.time_remaining == "Reminder Expired" %}
-                                    <small class="card-text" style="color: #ff001b"><b>Your reminder has
-                                        expired</b></small>
-                                {% else %}
-                                    <small class="card-text" style="color: #FDC642"><b>Time
-                                        remaining: {{ reminder.time_remaining }}</b></small>
-                                {% endif %}
-                            </div>
-                        </div>
-                        </div>
-                    {% endfor %}
-                </div>
-                <div class="col-md-6 mx-auto" style="max-width: 700px">
-                    <h1 class="primary-text text-center" style="color: #ff001b"> Expired Reminders </h1>
-                    {% for reminder in expired_reminders %}
-                        <div class="card border-secondary mb-4">
-                            <div class="card border-secondary">
-                            <div class="card-body">
-                                <h5 class="card-title text-success">{{ reminder.name }}</h5>
-                                <p class="card-text">{{ reminder.description }}</p>
-                                <p class="card-text"><i>Course:</i> {{ reminder.course }}</p>
-                            </div>
-                            <div class="text-right ml-auto">
-                                <a href="{% url 'reminder_details' name=reminder.id %}?source=reminders"
-                                   class="btn btn-outline-success mb-2 mr-2">See more</a>
-                            </div>
-                            <div class="card-footer">
-                                {% if reminder.time_remaining == "Reminder Expired" %}
-                                    <small class="card-text" style="color: #ff001b"><b>Your reminder has
-                                        expired</b></small>
-                                {% else %}
-                                    <small class="card-text" style="color: #FDC642"><b>Time
-                                        remaining: {{ reminder.time_remaining }}</b></small>
-                                {% endif %}
-                            </div>
-                        </div>
-                        </div>
-                    {% endfor %}
-                </div>
-            </div>
-        </div>
-            <div class="fixed-bottom text-right mx-5 mb-3">
-            <a href="{% url 'add_reminder' %}" class="btn btn-primary px-4">Add New Reminder</a>
-        </div>
+            {% include "unauthenticated_message.html" %}
         {% endif %}
-        </div>
-
-
-
-    {% else %}
-        {% include "unauthenticated_message.html" %}
-    {% endif %}
+    </div>
 {% endblock %}
-
-
-
-        <!-- Updated code with card layout -->
-        {#    <div class="mx-5 px-4">#}
-        {#        <div class="row">#}
-        {#            {% for reminder in reminders %}#}
-        {#                <div class="col-md-4 mb-4">#}
-        {#                    <div class="card navcolor-border">#}
-        {#                        <h4 class="card-header navcolor text-white">{{ reminder.name }}</h4>#}
-        {#                        <div class="card-body">#}
-        {#                            <h5 class="card-title">{{ reminder.description }}</h5>#}
-        {#                            <p class="card-text">{{ reminder.course }}</p>#}
-        {#                            <p class="card-text">{{ reminder.deadline }}</p>#}
-        {#                            {% if reminder.time_remaining == "Reminder Expired" %}#}
-        {#                                <p class="card-text" style="color: #ff001b"><b>Your reminder has expired</b></p>#}
-        {#                            {% else %}#}
-        {#                                <p class="card-text" style="color: #FDC642">Time remaining: {{ reminder.time_remaining }}</p>#}
-        {#                            {% endif %}#}
-        {#                                <div class="text-right ml-auto">#}
-        {#                                    <a href="{% url 'reminder_details' name=reminder.name %}" class="btn btn-outline-success">See more</a>#}
-        {#                                </div>#}
-        {#                        </div>#}
-        {#                    </div>#}
-        {#                </div>#}
-        {#            {% endfor %}#}
-        {#        </div>#}
-        {#    </div>#}
