--- a/templates/task_details.html
+++ b/templates/task_details.html
@@ -5,26 +5,63 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container">
-        <a href="{% if source == '/' %}{% url 'home' %}{% else %}{% url 'assignments' %}{% endif %}"
+    {% if user.is_authenticated %}
+        <div class="container">
+            <a href="{% if source == '/' %}{% url 'home' %}{% else %}{% url 'assignments' %}{% endif %}"
                class="btn btn-outline-secondary">Go Back</a>
-{#        <h1 class="text-center primary-text my-5">{{ task.name }} Details</h1>#}
-        <div class="card border-info mb-3 mx-auto" style="max-width: 700px">
-            <div class="card-header">
-                <h3 class="card-title text-info">{{ task.name }}</h3>
-            </div>
-            <div class="card-body">
-                <h4 class="card-text">Task is {% if task.is_finished %}Finished{% else %}Not Finished{% endif %}</h4>
-                <p class="card-text">Assignment: {{ task.assignment.name }}</p>
-                <div class="d-flex mt-3">
-                    <div class="text-left">
-                        <a href="{% url 'edit_task' task.id %}" class="btn btn-outline-dark">Edit Task</a>
+            {#        <h1 class="text-center primary-text my-5">{{ task.name }} Details</h1>#}
+            <div class="card border-info mb-3 mx-auto" style="max-width: 700px">
+                <div class="card-header">
+                    <h3 class="card-title text-info">{{ task.name }}</h3>
+                </div>
+                <div class="card-body">
+                    <h4 class="card-text">Task is {% if task.is_finished %}Finished{% else %}Not
+                        Finished{% endif %}</h4>
+                    <p class="card-text">Assignment: {{ task.assignment.name }}</p>
+
+                    <div class="d-flex mt-3">
+                        <div class="text-left">
+                            <button type="button" class="btn btn-danger" data-toggle="modal"
+                                    data-target="#deleteTaskModal">
+                                Delete
+                            </button>
+                        </div>
+                        <div class="text-right ml-auto">
+                            <a href="{% url 'edit_task' task.id %}" class="btn btn-outline-dark">Edit</a>
+                        </div>
                     </div>
-                    <div class="text-right ml-auto">
-                        <a href="{% url 'delete_task' task.id %}" class="btn btn-outline-danger">Delete Task</a>
+
+                </div>
+            </div>
+        </div>
+
+        <!-- Define the Bootstrap modal for task deletion confirmation -->
+        <div class="modal fade" id="deleteTaskModal" tabindex="-1" role="dialog" aria-labelledby="deleteTaskModalLabel"
+             aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="deleteTaskModalLabel">Confirm Delete Task</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        Are you sure you want to delete this task? If you proceed, the task and any associated progress
+                        will
+                        be lost.
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">No, Keep Task</button>
+                        <form method="post" action="{% url 'delete_task' name=task.id %}" class="d-inline">
+                            {% csrf_token %}
+                            <button type="submit" class="btn btn-danger">Yes, Delete</button>
+                        </form>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    {% else %}
+        {% include "unauthenticated_message.html" %}
+    {% endif %}
 {% endblock %}
